@@ -1,9 +1,13 @@
   --------------------------  HepMC3.3.0-pre ----------------------
+2024-05-23 Andrii Verbytskyi
+         * Update python bindings with binder 1.4.2
+         * Update bxzstr to bxzstr 1.2.2 + patches
+         * Formatting
 2024-05-23 Andy Buckley
          * Add "safe" functions to the FourVector. Redefine the rapidity as log(pz/|e|) to prevent problems with negative energy.
 2024-04-20 Andy Buckley
          * Suppress cross-section/weight count-mismatch warning if only one cross-section.
-2024-04-08 Mattias Ellert
+2024-04-08 Andrii Verbytskyi
          * Add support for reading with uproot
          * Drop Python2 support
 2023-10-24 Mattias Ellert
